# deriving-impl-frame-llm

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  mkdocs.yml  paper.tex  pyproject.toml  revised.tex
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: README.md  api.md  architecture.md  authoring_benchmarks.md  closing_the_construct_validity_gap.md  concepts.md  construct_validity.md  construct_validity_workflow.md  glossary.md  interpreting_metrics.md  providers.md  schemas.md
docs/tutorials/: 01_quickstart.ipynb  02_authoring_a_benchmark.ipynb  03_paraphrase_axis_experiment.ipynb  04_pulmonology_visualization.ipynb
examples/pulmonary_edema/: README.md  benchmark.json
examples/stop_sign/: README.md  benchmark.json
experiments/: paraphrase_axis_triangulation.py
experiments/results/: cross_family_2026-05-18.md  pulmonology_2026-05-19.md
experiments/results/cross-family/: claude-haiku-4.5-original.json  claude-haiku-4.5-perceptual.jsonl  claude-opus-4.7-original.json  claude-opus-4.7-original.jsonl  claude-opus-4.7-perceptual.json  deepseek-v4-flash-intrinsic.jsonl  deepseek-v4-flash-original.json  deepseek-v4-flash-perceptual.json  deepseek-v4-pro-intrinsic.json  deepseek-v4-pro-intrinsic.jsonl  deepseek-v4-pro-original.json  deepseek-v4-pro-original.jsonl  deepseek-v4-pro-perceptual.json  gemini-2.5-flash-intrinsic.json  gemini-2.5-flash-intrinsic.jsonl  gemini-2.5-flash-original.json  gemini-2.5-flash-perceptual.jsonl  gemini-2.5-pro-original.jsonl  gpt-4.1-intrinsic.jsonl  gpt-4.1-original.json  gpt-4.1-original.jsonl  gpt-5.4-intrinsic.json  gpt-5.4-intrinsic.jsonl  gpt-5.4-mini-original.json  gpt-5.4-mini-original.jsonl  gpt-5.4-mini-perceptual.jsonl  gpt-5.4-original.json  gpt-5.4-original.jsonl  gpt-5.4-perceptual.jsonl  mistral-large-intrinsic.jsonl  mistral-large-original.json  mistral-large-original.jsonl  mistral-large-perceptual.json  mistral-small-intrinsic.json  mistral-small-original.json  mistral-small-perceptual.json  qwen3-max-intrinsic.jsonl  qwen3-max-original.jsonl  qwen3-max-perceptual.jsonl  qwen3.6-flash-intrinsic.json  (+1 more)
experiments/results/pulmonology/: claude-opus-4.7-eta.json  gpt-4.1-eta.json  (+10 more)
src/infereval/: __init__.py  benchmark.py  context.py  endorsement.py  evaluation.py  frame.py  logging_setup.py  metrics.py  modeling.py  prompts.py  report.py  retest.py  structure.py  sweep.py  types.py
tests/: conftest.py
tests/fixtures/: build_stop_sign_replay.py  stop_sign_replay.jsonl
tests/integration/: test_providers_live.py
tests/unit/: test_analyst_rationales_propagation.py  test_benchmark_io.py  test_cli_describe.py  test_cli_evaluate.py  test_cli_metrics.py  test_cli_validate.py  test_context.py  test_endorsement.py  test_evaluate.py  test_evaluation_io.py  test_frame.py  test_logging_e2e.py  test_logging_setup.py  test_majority_vote.py  test_metrics_basic.py  test_metrics_cohen.py  test_metrics_distribution.py  test_metrics_fleiss.py  test_metrics_report.py  test_metrics_stop_sign.py  test_metrics_subsampling_ci.py  test_metrics_weighted.py  test_modeling.py  test_prompts.py  test_provider_anthropic.py  test_provider_base.py  test_provider_mock.py  test_provider_openai.py  test_provider_openrouter.py  test_provider_registry.py  test_provider_replay.py  test_replay_e2e.py  test_report.py  test_report_identity_criterion.py  test_report_individuation_gate.py  test_report_panel_kappa_rendering.py  test_report_r22.py  test_retest.py  test_schemas.py  test_smoke.py  (+4 more)
(+57 files in other folders)
