[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "infereval"
dynamic = ["version"]
description = "Inferentialist evaluation of LLMs: derive implication frames from a model's endorsement verdicts and measure model–analyst agreement on labeled inference benchmarks. Evidence bearing on inferential-mastery attribution."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Bradley P. Allen", email = "b.p.allen@uva.nl" },
]
keywords = ["llm", "inferentialism", "evaluation", "implication-frame", "kappa"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.6",
    "jsonschema>=4.21",
    "numpy>=1.26",
    "click>=8.1",
    "typing-extensions>=4.10",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
stats = ["statsmodels>=0.14"]
all = ["anthropic>=0.40", "openai>=1.40", "statsmodels>=0.14"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "build>=1.2",
    "twine>=5.0",
    "anthropic>=0.40",
    "openai>=1.40",
    "statsmodels>=0.14",
]

[project.scripts]
infereval = "infereval.cli.main:cli"

[project.urls]
Homepage = "https://github.com/bradleypallen/infereval"
Issues = "https://github.com/bradleypallen/infereval/issues"

[tool.hatch.version]
path = "src/infereval/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/infereval"]

[tool.hatch.build.targets.sdist]
include = [
    "src/infereval",
    "examples",
    "tests",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: tests that hit real LLM providers (opt-in via RUN_LIVE_PROVIDER_TESTS=1)",
]
addopts = "-ra"

[tool.coverage.run]
source = ["infereval"]
branch = false

[tool.coverage.report]
# Total line coverage threshold. M8 baseline is ~97%; 90% leaves room for
# future refactors without nuisance failures. Per-file coverage is high
# enough that we don't need per-file thresholds.
fail_under = 90
show_missing = true
exclude_lines = [
    # Defensive code paths that are intentionally unreachable.
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Files that mirror the paper's mathematical notation:
# S, n_S, p_e, P_i, P_bar, P_bar_e, S_F, n_F, kF, kC, kappa_C, X, A.
# Conformance to the paper trumps PEP-8 lowercase-locals.
"src/infereval/metrics.py" = ["N803", "N806"]
"src/infereval/cli/describe_cmd.py" = ["N806"]
"src/infereval/cli/metrics_cmd.py" = ["N803", "N806"]
"tests/unit/test_metrics_*.py" = ["N802", "N806"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
